<?xml version="1.0"?>
<package format="3">
  <name>cyber_is_bringup</name>
  <version>0.1.0</version>
  <description>Unified bringup for Cyber IS (ROS 2 Humble)</description>

  <maintainer email="victoria@todo.todo">victoria</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Runtime dependencies for nodes launched by bringup -->
  <exec_depend>cyber_is_description</exec_depend>
  <exec_depend>cyber_is_led_controller</exec_depend>
  <exec_depend>cyber_is_supervisor</exec_depend>
  <exec_depend>cyber_is_navigation</exec_depend>
  <exec_depend>uart_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
