<?xml version="1.0"?>
<package format="3">
  <name>cyber_is_description</name>
  <version>0.0.0</version>
  <description>Robot description (URDF/Xacro) and launch files for RViz2.</description>

  <maintainer email="victoria@todo.todo">victoria</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies for display/launch -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
