<?xml version="1.0"?>
<package format="2">
    <name>cyber_is_led_controller_v2</name>
    <version>0.0.0</version>
    <description>Control module for LEDs on all robot sides</description>

    <maintainer email="your@email.com">Your Name</maintainer>
    <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
