<package format="3">
  <name>cyber_is_manual_controller</name>
  <version>0.1.0</version>
  <description>Paczka ROS 2 (Humble) do uruchamiania trybu manualnego: teleop z joysticka i (opcjonalnie) MJPG-streamer.</description>
  <maintainer email="jakubstrzalkaa@gmail.com">Kuba_Arrow</maintainer>
  <license>MIT</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
