<?xml version="1.0"?>
<package format="3">
  <name>cyber_is_supervisor</name>
  <version>0.1.0</version>
  <description>ROS 2 (Humble) supervisor node in rclcpp managing MANUAL/AUTO modes. Autonomy mode is a placeholder.</description>

  <maintainer email="victoria@todo.todo">victoria</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
