<?xml version="1.0"?>
<package format="2">                      <!-- ⬅︎  DODAJ format="2" -->
    <name>virtual_costmap_layer</name>
    <version>0.2.0</version>
    <description>virtual_costmap_layer package</description>

    <maintainer email="mahmoud.ghorbel@hotmail.com">MG</maintainer>
    <license>TODO</license>

    <!-- Build tools -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Build-time deps -->
    <build_depend>roscpp</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>

    <!-- Headers/libs które inni potrzebują do kompilacji -->
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>costmap_2d</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>

    <!-- Runtime deps -->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf</exec_depend>

    <export>
        <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
    </export>
</package>
